--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "async": "latest",
     "geoip": "latest",
     "optimist": "latest",
-    "qjobs": "latest",
+    "qjobs": "1.1.3",
     "winston": "latest",
     "bcrypt": "latest",
     "express": "latest",
